--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -3,39 +3,41 @@
     = title
     - if details.length > 0
       %span.details= details
-  %table
-    %tr
-      %th= '&nbsp;'
-      - if start_at == 1
+  %table{ :id => board_id }
+    %thead
+      %tr
         %th= '&nbsp;'
-      %th= 'Person'[]
-      %th= 'Ranking'[]
-      %th= 'Played'[]
-      %th= 'Won'[]
-      %th= 'Lost'[]
-      %th= 'Win %'[]
-      %th{ :title => 'Goal difference average'[] }= 'Diff. avg.'[]
-
-    - game_participations.each_with_index do |game_participation, index|
-      %tr{ :class => cycle('odd', 'even') }
-        %td= index + start_at
         - if start_at == 1
+          %th= '&nbsp;'
+        %th= 'Person'[]
+        %th= 'Ranking'[]
+        %th= 'Played'[]
+        %th= 'Won'[]
+        %th= 'Lost'[]
+        %th= 'Win %'[]
+        %th{ :title => 'Goal difference average'[] }= 'Diff. avg.'[]
+
+    %tbody
+      - game_participations.each_with_index do |game_participation, index|
+        %tr
+          %td= index + start_at
+          - if start_at == 1
+            %td
+              - if game_participation.user.created_at <= 7.days.ago
+                = position_icon(@positions[game_participation.user_id])
+                = '(' + @positions[game_participation.user_id][:then].to_s + ')' unless @positions[game_participation.user_id].blank?
+              - else
+                &nbsp;
           %td
-            - if game_participation.user.created_at <= 7.days.ago
-              = position_icon(@positions[game_participation.user_id])
-              = '(' + @positions[game_participation.user_id][:then].to_s + ')' unless @positions[game_participation.user_id].blank?
-            - else
-              &nbsp;
-        %td
-          = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this user's matches"[]), game_matches_path(current_game, :filter => game_participation.user_id)
-          = user_link_full(current_game, game_participation.user)
-        %td= game_participation.ranking
-        %td= game_participation.matches_played
-        %td= game_participation.matches_won
-        %td= game_participation.matches_lost
-        %td= game_participation.winning_percentage.to_s + '%'
-        %td= game_participation.difference_average
-    - reset_cycle
+            = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this user's matches"[]), game_matches_path(current_game, :filter => game_participation.user_id)
+            = user_link_full(current_game, game_participation.user)
+          %td= game_participation.ranking
+          %td= game_participation.matches_played
+          %td= game_participation.matches_won
+          %td= game_participation.matches_lost
+          %td= game_participation.winning_percentage.to_s + '%'
+          %td= game_participation.difference_average
+      - reset_cycle
     
   - if start_at == 1
     .notes= "Numbers in parenthesis: user's position 7 days ago. The arrow indicates position movement."[]
