--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -253,13 +253,34 @@ table.form
       :background-color #77BBDD
       :padding 3px
       :color #FFFFFF
-      
+      :padding-left 5px
+      :padding-right 5px
+
+      &.header
+        :background-image url(../images/sort_none.gif)
+        :cursor pointer
+        :font-weight bold
+        :background-repeat no-repeat
+        :background-position center right
+        :padding-right 20px
+        :margin-left -1px
+
+      &.headerSortUp
+        :background-image url(../images/sort_asc.gif)
+        :background-color #3399CC
+
+      &.headerSortDown
+        :background-image url(../images/sort_desc.gif)
+        :background-color #3399CC
+
       a
         :color #CCEEFF
 
     td
       :border 0
       :padding 3px
+      :padding-left 5px
+      :padding-right 5px
       :text-align left
       :vertical-align top
     
