--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -206,12 +206,30 @@ table.form {
       border-bottom: 1px solid #3399CC;
       background-color: #77BBDD;
       padding: 3px;
-      color: #FFFFFF; }
+      color: #FFFFFF;
+      padding-left: 5px;
+      padding-right: 5px; }
+      .list table th.header {
+        background-image: url(../images/sort_none.gif);
+        cursor: pointer;
+        font-weight: bold;
+        background-repeat: no-repeat;
+        background-position: center right;
+        padding-right: 20px;
+        margin-left: -1px; }
+      .list table th.headerSortUp {
+        background-image: url(../images/sort_asc.gif);
+        background-color: #3399CC; }
+      .list table th.headerSortDown {
+        background-image: url(../images/sort_desc.gif);
+        background-color: #3399CC; }
       .list table th a {
         color: #CCEEFF; }
     .list table td {
       border: 0;
       padding: 3px;
+      padding-left: 5px;
+      padding-right: 5px;
       text-align: left;
       vertical-align: top; }
       .list table td img {
