--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -12,25 +12,27 @@
   .list
     %h3= 'Team mates'[]
 
-    %table
-      %tr
-        %th &nbsp;
-        %th &nbsp;
-        %th= 'Team mate'[]
-        %th= 'Ranking'[]
-        %th= 'Matches played'[]
-        %th= 'Matches won'[]
-        %th= 'Percentage won'[]
-      
-      - @teams.each do |team|
-        %tr{ :class => cycle('odd', 'even') }
-          %td= link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(@game, :filter => team[:team].team_ids)
-          %td= link_to image_tag('icons/chart_bar.png', :class => 'team'), game_team_path(@game, team[:team].team_ids)
-          %td= link_to team[:team_mate].name, game_user_path(@game, team[:team_mate])
-          %td= team[:team_mate_game_participation].ranking.to_i
-          %td= team[:played]
-          %td= team[:wins]
-          %td= team[:win_percentage] + ' %'
+    %table{ :id => 'teammates' }
+      %thead
+        %tr
+          %th &nbsp;
+          %th &nbsp;
+          %th= 'Team mate'[]
+          %th= 'Ranking'[]
+          %th= 'Matches played'[]
+          %th= 'Matches won'[]
+          %th= 'Percentage won'[]
+
+      %tbody
+        - @teams.each do |team|
+          %tr{ :class => cycle('odd', 'even') }
+            %td= link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(@game, :filter => team[:team].team_ids)
+            %td= link_to image_tag('icons/chart_bar.png', :class => 'team'), game_team_path(@game, team[:team].team_ids)
+            %td= link_to team[:team_mate].name, game_user_path(@game, team[:team_mate])
+            %td= team[:team_mate_game_participation].ranking.to_i
+            %td= team[:played]
+            %td= team[:wins]
+            %td= team[:win_percentage] + ' %'
 
 - content_for :sidebar do
   .user
