Fixed missing dash between member names under "Recent games" with teams of 3 people Removed spacing on team list

--- a/app/views/matches/_members.html.haml
+++ b/app/views/matches/_members.html.haml
@@ -1,4 +1,4 @@
 - team.memberships.sort_by(&:id).each_with_index do |membership, index|
-  = ' - ' if index == 1
+  = ' - ' if index > 0
   %span{ :title => membership.points_awarded }
     = user_link(current_game, find_user(membership.user_id))
