--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -28,3 +28,6 @@
           = opponent.matches
           %label= 'Won'[] + ':'
           = opponent.wins
+
+- content_for :head do
+  = javascript_include_tag 'swfobject'
