--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -29,7 +29,7 @@
               = match.played_at.to_s :short
               = ' by {user}'[:by_user, link_to(find_user(match.creator_id).login, game_user_path(current_game, find_user(match.creator_id)))] unless match.creator_id.nil?
 
-            %td= link_to 'Delete', game_match_path(match.game_id, match), :method => :delete, :confirm => 'Delete match. Are you sure?'[] if logged_in?
+            %td= link_to 'Delete', game_match_path(match.game_id, match), :method => :delete, :confirm => "Delete match. Are you sure?\n\nBe aware that deleting a match may take a while."[] if logged_in?
 
   = will_paginate @matches
 
