Change team size text field to radio buttons

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -240,6 +240,9 @@ table.form
     
   td.field
     :width 75%
+    
+    label
+      display: inline
 
 .list
   :margin-top 1.5em
@@ -412,6 +415,11 @@ table.form
     input
       :display block
       :margin-bottom 10px
+
+  .radio
+    label
+      display: inline
+      font-weight: normal
 
   #filter
     :margin-top 1.5em
