--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -10,8 +10,10 @@
       - if @game.matches.size > 0
         = @game.team_size
       - else
-        = f.text_field :team_size, :class => 'text required small'
-        .notes= 'Must be between 1 and 3.'[]
+        - (1..3).each do |team_size|
+          %div.radio
+            = f.radio_button(:team_size, team_size, :id => "game_team_size_#{team_size}", :class => 'radio') + f.label("team_size_#{team_size}", "#{team_size}-on-#{team_size}")
+        .notes= 'Number of players on each team.'[]
 
   %tr
     %td.label &nbsp;
