--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -55,5 +55,6 @@
       = render :partial => 'matches/per_day', :locals => { :matches_per_day => @matches_per_day }
       
 #dashboard_data
-  .last_update= @logs.first.published_at.to_s(:db)
+  - if @logs && @logs.first
+    .last_update= @logs.first.published_at.to_s(:db)
   .game_id= current_game.id
