More data on matches/show

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -435,6 +435,22 @@ table.form
     :margin-top 1.5em
     :margin-bottom 1.5em
     
+    .team
+      h3
+        :margin 0
+        :margin-top 1.5em
+        
+      .list
+        :margin-top 5px
+        :margin-bottom 1.5em
+        
+        .score
+          :text-align center
+          :vertical-align middle
+          
+        .team-2
+          :font-size 2em
+    
   #comments
     :border-top 1px solid #CCCCCC
 
