--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -343,6 +343,17 @@ table.form {
 #bd #match {
   margin-top: 1.5em;
   margin-bottom: 1.5em; }
+  #bd #match .team h3 {
+    margin: 0;
+    margin-top: 1.5em; }
+  #bd #match .team .list {
+    margin-top: 5px;
+    margin-bottom: 1.5em; }
+    #bd #match .team .list .score {
+      text-align: center;
+      vertical-align: middle; }
+    #bd #match .team .list .team-2 {
+      font-size: 2em; }
 #bd #comments {
   border-top: 1px solid #CCCCCC; }
   #bd #comments .odd {
