--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -361,6 +361,9 @@ table.form
       li
         :padding-bottom 6px
 
+  #dashboard_data
+    :display none
+
   .bottom_space
     :padding-bottom 20px
 
