--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -292,6 +292,8 @@ table.form {
     margin-top: 0; }
     #bd #errorExplanation ul li {
       padding-bottom: 6px; }
+#bd #dashboard_data {
+  display: none; }
 #bd .bottom_space {
   padding-bottom: 20px; }
 #bd #messages {
