Showing the medal didnt work properly.

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -484,6 +484,12 @@ table.form
   
         .user
           :font-weight bold
+          
+        .medal
+          img
+            :margin 0
+            :padding 0
+            :vertical-align text-bottom
         
       .edit
         :margin-bottom 1em
