Big score on games with 3 people per team

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -451,7 +451,7 @@ table.form
           :text-align center
           :vertical-align middle
           
-        .team-2
+        .team-2, .team-3
           :font-size 2em
     
   #comments
