--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -8,7 +8,7 @@
     = render :partial => 'leaderboard', :locals => { :game_participations => @rankings, :start_at => 1, :title => 'Rankings'[], :details => '', :board_id => 'rankings' }
 
   - if @newbies.size > 0
-    = render :partial => 'leaderboard', :locals => { :game_participations => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, current_game.newbie_limit], :board_id => 'newbies' }
+    = render :partial => 'leaderboard', :locals => { :game_participations => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, @game.newbie_limit], :board_id => 'newbies' }
 
 - if @recent_matches.size > 0
   = render :partial => 'recent_matches', :locals => { :recent_matches => @recent_matches }
@@ -20,8 +20,8 @@
     - unless @leader.nil?
       #leader
         %h3= 'Leader'[]
-        .mugshot= link_to image_tag(@leader.user.mugshot.public_filename(:thumb), :alt => @leader.user.name), game_user_path(current_game, @leader.user) if @leader.user.mugshot
-        = user_link_full current_game, @leader.user
+        .mugshot= link_to image_tag(@leader.user.mugshot.public_filename(:thumb), :alt => @leader.user.name), game_user_path(@game, @leader.user) if @leader.user.mugshot
+        = user_link_full @game, @leader.user
 
     #counts
       %h3= 'Totals'[]
@@ -39,17 +39,17 @@
             %td
               - unless @all_time_high.nil?
                 %label= 'All time high'[] + ':'
-                = link_to @all_time_high.current_ranking, game_match_path(current_game, @all_time_high.team.match), :class => 'match'
+                = link_to @all_time_high.current_ranking, game_match_path(@game, @all_time_high.team.match), :class => 'match'
                 = 'by'[]
                 %br
-                = user_link_full current_game, find_user(@all_time_high.user_id)
+                = user_link_full @game, find_user(@all_time_high.user_id)
             %td
               - unless @all_time_low.nil?
                 %label= 'All time low'[] + ':'
-                = link_to @all_time_low.current_ranking, game_match_path(current_game, @all_time_low.team.match), :class => 'match'
+                = link_to @all_time_low.current_ranking, game_match_path(@game, @all_time_low.team.match), :class => 'match'
                 = 'by'[]
                 %br
-                = user_link_full current_game, find_user(@all_time_low.user_id)
+                = user_link_full @game, find_user(@all_time_low.user_id)
 
     - if @matches_per_day.size > 0
       = render :partial => 'matches/per_day', :locals => { :matches_per_day => @matches_per_day }
@@ -57,4 +57,4 @@
 #dashboard_data
   - if @logs && @logs.first
     .last_update= @logs.first.published_at.to_s(:db)
-  .game_id= current_game.id
+  .game_id= @game.id
