--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -10,7 +10,6 @@
     = stylesheet_link_tag 'print', :media => 'print'
     /[if IE]
       = stylesheet_link_tag 'lib/ie', :media => 'screen, projection'
-    = javascript_include_tag :defaults
     = yield :head
 
   %body.login
@@ -37,3 +36,4 @@
           .content= yield
 
       = render :partial => 'shared/footer'
+    = javascript_include_tag 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'application'  
