--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -160,6 +160,9 @@ textarea
     :margin-right 0.5em
     :width 3em
 
+  .game_added_warning
+    :margin-left 0.5em
+
 h2#page_title
   :display none
   :margin 0
