--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -36,4 +36,4 @@
           .content= yield
 
       = render :partial => 'shared/footer'
-    = javascript_include_tag 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'application'  
+    = javascript_include_tag 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'application', :cache => true
