--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -48,4 +48,4 @@
             .content= sidebar
 
       = render :partial => 'shared/footer'
-    = javascript_include_tag 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'application'
+    = javascript_include_tag 'jquery', 'jquery-ui', 'jquery-fx', 'jquery.tablesorter', 'application', :cache => true
