--- a/app/views/comments/edit.js.erb
+++ b/app/views/comments/edit.js.erb
@@ -2,6 +2,6 @@
   <%= render :partial => 'comments/form', :locals => { :f => f } %>
   <p>
     <%= submit_tag 'Save changes'[] %>
-    <%= link_to_remote 'Cancel', :update => "content_#{@comment.id}", :url => match_comment_path(@comment.match_id, @comment.id) %>
+    <%= link_to_remote 'Cancel', :update => "content_#{@comment.id}", :url => game_match_comment_path(@comment.match.game_id, @comment.match_id, @comment.id) %>
   </p>
 <% end %>
