Fixed padding for feed links on the matches list

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -431,6 +431,14 @@ table.form
 
     .comments
       :white-space nowrap
+      
+  #feeds
+    :padding-top 10px
+    :padding-bottom 20px
+    
+    a.rss
+      :display inline
+      :margin-right 10px
         
   #match
     :margin-top 1.5em
@@ -510,7 +518,6 @@ table.form
 
   .pagination
     :padding-top 10px
-    :padding-bottom 10px
 
   .match
     :margin-bottom 20px
