--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -33,10 +33,10 @@
 
   = will_paginate @matches
 
-  .bottom_space
-    = link_to 'Atom feed (all matches)'[] + ' ' + image_tag('rss.gif'), match_feed_url(current_game), :class => 'rss'
+  #feeds
+    = link_to image_tag('rss.gif') + ' ' + 'Atom feed (all matches)'[], match_feed_url(current_game), :class => 'rss'
     - unless params[:filter].blank?
-      = link_to 'Atom feed (filtered)'[] + ' ' + image_tag('rss.gif'), match_feed_url(current_game, :filter => params[:filter]), :class => 'rss'
+      = link_to image_tag('rss.gif') + ' ' + 'Atom feed (filtered)'[], match_feed_url(current_game, :filter => params[:filter]), :class => 'rss'
 
 - content_for :head do
   = auto_discovery_link_tag :atom, match_feed_url(current_game), :title => 'All matches'[]
