Separate admin menu tabs from normal tabs

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -127,6 +127,9 @@ textarea
       a
         :background-image url('../images/tab_active_left.gif')
         :color #7C7C7C
+        
+    li.admin
+      :margin-left 3em
 
   #login_form
     :display none
