--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -8,7 +8,7 @@
       %th= 'Matches'
       %th= 'Actions'
     - @account_users.each do |user|
-      %tr{ :class => cycle('odd', 'even') }
+      %tr{ :class => cycle('even', 'odd') }
         %td= h(user.name)
         %td= h(user.display_name)
         %td= mail_to user.email
