--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -3,12 +3,13 @@
 - if @logs.size > 0
   = render :partial => 'logs', :locals => { :logs => @logs }
 
-- cache(cache_key) do
-  - if @rankings.size > 0
-    = render :partial => 'leaderboard', :locals => { :game_participations => @rankings, :start_at => 1, :title => 'Rankings'[], :details => '', :board_id => 'rankings' }
+- form_tag game_comparisons_path(current_game), :method => :get do
+  #leaderboards
+    - if @rankings.size > 0
+      = render :partial => 'leaderboard', :locals => { :game_participations => @rankings, :start_at => 1, :title => 'Rankings'[], :details => '', :board_id => 'rankings' }
 
-  - if @newbies.size > 0
-    = render :partial => 'leaderboard', :locals => { :game_participations => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, @game.newbie_limit], :board_id => 'newbies' }
+    - if @newbies.size > 0
+      = render :partial => 'leaderboard', :locals => { :game_participations => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, @game.newbie_limit], :board_id => 'newbies' }
 
 - if @recent_matches.size > 0
   = render :partial => 'recent_matches', :locals => { :recent_matches => @recent_matches }
