Added padding to compare button

--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -43,4 +43,4 @@
 
   - if start_at == 1
     .notes= "Numbers in parenthesis: user's position 7 days ago. The arrow indicates position movement."[]
-  = submit_tag 'Compare'
+  = submit_tag 'Compare', :class => 'submit'
