--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -372,6 +372,9 @@ table.form
         
     .notes
       :float right
+      
+    input.submit
+      :margin-top 3px
 
   #dashboard_data
     :display none
