--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -14,7 +14,7 @@
 
       %tbody
         - @teams.each do |team|
-          %tr
+          %tr{ :class => cycle('even', 'odd') }
             %td.user
               = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), game_matches_path(current_game, :filter => team[:team_ids])
               = link_to image_tag('icons/chart_bar.png', :class => 'team'), game_team_path(current_game, team[:team_ids])
