--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -730,6 +730,27 @@ table.form
       h3
         :padding 0
         :margin 0
+      
+    #news
+      h3
+        :margin-top 1.5em
+        
+      ul
+        :margin 0
+        
+        li
+          :margin 0
+          :list-style none
+          :margin-top 0.5em
+          
+          a
+            :display block
+            
+          span
+            :font-size 11px
+            :color #999999
+            :position relative
+            :top -5px
 
     #matches_per_day
       h3
