Capitalize time in game added warning

--- a/app/views/games/game_added_warning.html.haml
+++ b/app/views/games/game_added_warning.html.haml
@@ -1,4 +1,4 @@
-= time_ago_in_words(@latest_membership.created_at)
+= time_ago_in_words(@latest_membership.created_at).capitalize
 ago
 = @latest_membership.team.match.creator.name
 added
