Detail links on match list

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -704,6 +704,12 @@ table.form
   
   label
     :display block
+    
+  a
+    img
+      :float none
+      :margin 0
+      :vertical-align text-bottom
 
   .content
     :padding-top 1.5em
