--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -4,11 +4,9 @@
   - if @filter
     #filter
       - if @filter.length > 1
-        = 'Filter by <b>{first}</b> and <b>{second}</b>'[:filter_by_two, h(@filter[0].display_name), h(@filter[1].display_name)]
+        = 'Showing matches for <b>{first}</b> and <b>{second}</b>'[:filter_by_two, h(@filter[0].display_name), h(@filter[1].display_name)]
       - else
-        = 'Filter by <b>{first}</b>'[:filter_by_one, h(@filter[0].display_name)]
-
-      = link_to 'Clear filter', game_matches_path(current_game), :class => 'clear'
+        = 'Showing matches for <b>{first}</b>'[:filter_by_one, h(@filter[0].display_name)]
 
   #matches
     .list
@@ -43,3 +41,11 @@
 
   - unless params[:filter].blank?
     = auto_discovery_link_tag :atom, match_feed_url(current_game, :filter => params[:filter]), :title => 'Filtered'[]
+
+- if @filter
+  - content_for :sidebar do
+    %p= link_to 'Show all matches', game_matches_path(current_game), :class => 'clear'
+    - if @filter.length == 1
+      = link_to 'Show user details'[], game_user_path(current_game, @filter.first)
+    - elsif @filter.length > 1
+      %p= link_to image_tag('icons/chart_bar.png') + ' ' + 'Show team details'[], game_team_path(current_game, @filter.collect(&:id).join(','))
