--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -886,7 +886,7 @@ body.login, body.public
 body.login
   .container
     :width 470px
-    
+
 body.public
   h1
     :font-size 19px
@@ -900,6 +900,14 @@ body.public
     
   h3
     :font-size 15px
+
+  #domain_login
+    .notes
+      :color #66666E
+      :font-size 11px
+      
+    .submit
+      :margin-top 1em
 
   #new_account
     h3
