Show how many users are needed. Allow editing user creation form when it is filled out wrongly.

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -22,4 +22,4 @@
       = text_field_tag :domain, nil, :id => 'domain'
       .notes= 'Enter the subdomain you signed up with.'
       
-      = submit_tag 'Go', :class => 'submit'
+      = submit_tag 'Go to login form'[], :class => 'submit'
