--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,10 @@
             - if enabled_users.size >= current_game.team_size * 2
               = link_to_function image_tag('icons/add.png') + ' ' + 'Add match'[], "scoreKeeper.newMatch.toggle();"
             - else
-              #user_minimum= 'You need at least {user_minimum} users'[:you_need_user_minimum_users, current_game.team_size * 2]
+              - if current_game.team_size * 2 - enabled_users.size == 1
+                #user_minimum= 'Add one more user'[:add_one_more_user]
+              - else
+                #user_minimum= 'Add {users_needed} more users'[:add_x_more_ser, current_game.team_size * 2 - enabled_users.size]
   
       - unless current_game.nil?
         #add_match_form.column.span-24{ :style => 'display: none' }
