--- a/app/views/shared/_menu.html.haml
+++ b/app/views/shared/_menu.html.haml
@@ -5,7 +5,9 @@
     - if current_game.team_size > 1
       %li{ :class => controller.controller_name == 'teams' ? 'current' : nil }= link_to 'Teams'[], game_teams_path(current_game)
     %li{ :class => controller.controller_name == 'comparisons' ? 'current' : nil }= link_to 'Compare'[], game_comparisons_path(current_game)
-  %li.admin{ :class => controller.controller_name == 'games' ? 'current' : nil }= link_to 'Games'[], games_path
+    %li.admin{ :class => controller.controller_name == 'games' ? 'current' : nil }= link_to 'Games'[], games_path
+  - if current_game.nil?
+    %li{ :class => controller.controller_name == 'games' ? 'current' : nil }= link_to 'Games'[], games_path
   %li{ :class => controller.controller_name == 'users' ? 'current' : nil }= link_to 'Users'[], users_path
   - if admin?
     %li{ :class => controller.controller_name == 'accounts' ? 'current' : nil }= link_to 'Accounts'[], accounts_path
